<resources>
    <string name="app_name">CustomProject</string>
    <string name="homeMenu">Home</string>
    <string name="progressMenu">Progress</string>
    <string name="videosMenu">Lessons</string>
    <string name="settingsMenu">Settings</string>
    <string name="quickNote">Quick Note</string>
    <string name="bookmarkBtn">Bookmarks</string>
    <string name="noteDesc">Enter Note Here</string>
    <string name="noteTitle"> Title</string>
    <string name="saveBtn"> Save</string>
    <string name="cancelBtn"> Cancel</string>
    <string name="notesMenu">Notes</string>
    <string name="pVersesRead">Verses Read:</string>
    <string name="titleError"> Title can not be empty</string>
    <string name="pChaptersRead">Chapters:</string>
    <string name="pActiveDays">Active Days:</string>
    <string name="pTimeSpent">Time Spent:</string>
    <string name="pProgress">Progress</string>
    <string name="startTime">Start</string>
    <string name="pauseTime">Pause</string>
    <string name="bookmark_title">Bookmark</string>
    <string name="notes_title">Notes</string>
    <string name="search_menu">Search</string>
    <string name="jump_to_verse">Note</string>
    <string name="copy_verse">Copy</string>
    <string name="title_achiev">Achievement</string>
    <string name="progress_amount">Progress Amount</string>
    <string name="progress_time">Progress Time</string>
    <string name="aheiv_allBtn">View All</string>
    <string name="read_100A">Read 100 Verses</string>
    <string name="read_1500A">Read 1500 Verses</string>
    <string name="read_all">Read the full quran</string>
    <string name="shared_pref_achiv">achievement_sharedPref</string>
    <string name="no_bookmarks">No bookmarks added</string>
    <string name="no_notes">No notes added</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="last_month">Last Month Progress</string>
    <string name="last_day">A new day with new Achievements</string>
    <string name="last_progress">Your last progress, %1$s</string>
    <string name="all">All</string>
    <string name="this_week">Week</string>
    <string name="todayPog">Today</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="default_color">Default</string>
    <string name="no_red">No red notes</string>
    <string name="no_green">No green notes</string>
    <string name="no_brown">No brown notes</string>
    <string name="no_defualt">No default notes</string>
    <string name="text_style">Text style</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <string name="themeCateg">Theme</string>
    <string name="txt">Text</string>
    <string name="text_size">Text size</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_size_message">Change the size of verse text</string>
    <string name="slct_colot">Select color</string>
    <string name="reset_time">Reset</string>
    <string name="monitor_readingTime">Monitor your reading time</string>


</resources>