<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        app:key="theme_category"
        android:title="@string/themeCateg">

        <SwitchPreferenceCompat
            app:key="theme_mode"
            app:title="@string/enable_dark_mode"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="text_category"
        android:title="@string/txt" >
        <SeekBarPreference
            android:key="text_size"
            android:title="@string/text_size"
            android:summary="@string/text_size_message"
            android:max="40"
            android:min="15"
            />
    </PreferenceCategory>




</androidx.preference.PreferenceScreen>