<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressFragment"
  >


    <TextView
        android:id="@+id/tvCrrntDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="17/22/2022"
        android:textColor="?attr/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvTAM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCrrntDate">

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:text="@string/all"
            android:textAlignment="center"
            android:textColor="?attr/text_color"

            />

        <RadioButton
            android:id="@+id/rbWeekly"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:text="@string/this_week"
            android:textAlignment="center"
            android:textColor="?attr/text_color"

            />

        <RadioButton
            android:id="@+id/rbToday"
            android:layout_width="70dp"
            android:layout_height="35dp"

            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:text="@string/todayPog"
            android:textAlignment="center"
            android:textColor="?attr/text_color" />


    </RadioGroup>


    <TextView
        android:id="@+id/tvTAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/progress_amount"
        android:textColor="?attr/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/clVersesRead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clVersesRead"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="@dimen/cardview_default_radius"
        android:background="@drawable/progress_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTAM">

        <TextView
            android:id="@+id/tvTNVR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pVersesRead"
            android:textColor="?attr/text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTCR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvNumberVRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="?attr/text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTNVR"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pChaptersRead"
            android:textColor="?attr/text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTNVR"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvChaptersRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:text="0"
            android:textColor="?attr/text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTCR"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvTPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/progress_time"
        android:textColor="?attr/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/clTimeSpent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clVersesRead" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTimeSpent"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="@dimen/cardview_default_radius"
        android:background="@drawable/progress_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTPT">

        <TextView
            android:id="@+id/tvTTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pTimeSpent"
            android:textColor="?attr/text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTAD"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTotalHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="?attr/text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toEndOf="@id/tvTTH"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pActiveDays"
            android:textColor="?attr/text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTTH"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvActiveDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:text="0"
            android:textColor="?attr/text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTAD"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvTACH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_achiev"
        android:textColor="?attr/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/clAcheiv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTimeSpent" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:text="@string/aheiv_allBtn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/clAcheiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTimeSpent"
        android:textColor="?attr/visible_btn"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAcheiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="@dimen/cardview_default_radius"
        android:background="@drawable/item_background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTACH">


        <ImageView
            android:id="@+id/iv100V"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/reading_book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv1500V"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv1500V"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/reading_book2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivAllV"
            app:layout_constraintStart_toEndOf="@id/iv100V"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivAllV"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/reading_book3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv1500V"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>